# unitpg

./: .gitignore  AGENTS.md  COMPILER_OPTIONS.md  Cargo.toml  README.md  configure  configure.ac  meson.build  meson_options.txt  test-fastfork.sh
.github/: SECURITY.md  dependabot.yml  pr-validation-smoke.md
.github/workflows/: pr-validation.yml  release-server-binaries.yml  security-audit.yml
bench/: .gitignore  README.md  compare_pgbench.py  compare_startup.py  fastfork_seed.py  run_pgbench.py  run_startup.py  test_fastfork_epoch_rollback.py  test_fastfork_named_epoch_stress.py  test_fastfork_snapshot.py  test_macos_named_posix_semaphores.py  test_macos_no_sysv_shared_memory.py  test_no_data_directory_startup.py  test_seed_only_startup.py  unit-test-epoch-ddl.pgbench  unit-test-epoch-named.pgbench  unit-test-epoch-rollback.pgbench  unit-test-epoch-session.pgbench  unit-test-rollback.pgbench  unit-test-snapshot.pgbench
benches/: Makefile  open_latest_profile.py  pgbench_compare.py  regression_compare.py  upstream_regression_inventory.py
benches/regression/core/: 01_ddl_dml.sql  02_copy.sql  03_transactions.sql  04_primary_key_catalog.sql  05_join_count.sql  06_pg_attribute_catalog.sql  08_join.sql  10_secondary_index_ddl.sql
benches/regression/inventory/: 02_pg_index_catalog.sql  04_group_by.sql
benches/workloads/: unit-test-workload-setup.sql  unit-test-workload.sql
ci/: build-pgvector.sh  fastpg_perf_gate.py  package-rust-server-dist.sh  package-server-dist.sh
crates/fastpg-backend/: Cargo.toml
crates/fastpg-backend/src/: lib.rs
crates/fastpg-bind/: Cargo.toml
crates/fastpg-bind/src/: lib.rs
crates/fastpg-catalog/: Cargo.toml  build.rs
crates/fastpg-catalog/src/: generated_catalog.rs  lib.rs  lookups.rs  model.rs  rows.rs  state.rs  tests.rs
crates/fastpg-compat/: Cargo.toml
crates/fastpg-compat/src/: lib.rs
crates/fastpg-exec/: Cargo.toml
crates/fastpg-exec/src/: lib.rs
crates/fastpg-index/: Cargo.toml
crates/fastpg-index/src/: lib.rs
crates/fastpg-parser/: Cargo.toml
crates/fastpg-parser/src/: lib.rs
crates/fastpg-pgcore/: Cargo.toml  build.rs
crates/fastpg-pgcore/c/: pgcore_raw_parser.c
crates/fastpg-pgcore/src/: lib.rs
crates/fastpg-plan/: Cargo.toml
crates/fastpg-plan/src/: lib.rs
crates/fastpg-server/: Cargo.toml  build.rs
crates/fastpg-server/src/: cli.rs  lib.rs  main.rs
crates/fastpg-session/: Cargo.toml
crates/fastpg-session/src/: lib.rs
crates/fastpg-snapshot/: Cargo.toml
crates/fastpg-snapshot/src/: lib.rs
crates/fastpg-storage/: AGENTS.md  Cargo.toml
crates/fastpg-storage/benches/: storage_engine.rs
crates/fastpg-storage/src/: lib.rs
crates/fastpg-storage2/: Cargo.toml
crates/fastpg-storage2/src/: copy.rs  error.rs  index.rs  lib.rs  metrics.rs  page.rs  relation.rs  scan.rs  state.rs  tests.rs  tid.rs  transaction.rs  tuple.rs
crates/fastpg-testkit/: Cargo.toml  build.rs
crates/fastpg-testkit/src/: lib.rs
crates/fastpg-testkit/tests/: pgvector_smoke.rs  pgwire_smoke.rs  rust_server_concurrency_torture.rs
crates/fastpg-tx/: Cargo.toml
crates/fastpg-tx/src/: lib.rs
crates/fastpg-types/: Cargo.toml
crates/fastpg-types/src/: lib.rs
crates/fastpg-wire/: Cargo.toml
crates/fastpg-wire/src/: lib.rs
spec/: 001-in-memory-storage-manager.md  001-overview.md  002-in-memory-transaction-status-slrus.md  003-early-wal-assembly-bypass.md  004-compile-time-observability-bypass.md  005-fast-memory-contexts.md  006-ephemeral-catalog-fast-path.md  007-no-durable-maintenance.md  008-ephemeral-buffer-mode.md  009-direct-permanent-buffer-mode.md  010-trusted-ddl-mode.md  011-startup-benchmark.md  012-conservative-fast-startup.md  013-seed-only-startup.md  014-no-data-directory-startup.md  015-epochal-test-transaction-overlay.md  016-semantic-in-memory-table-engine.md  027-session-state-per-client.md  028-transaction-owned-storage-state.md  029-single-pgcore-execution-lane.md  030-catalog-generation-invalidation.md  031-fastpg-planner-overhead-pruning.md  032-storage-memory-ownership-accounting.md  033-storage-root-and-execution-context.md  034-storage-statement-snapshots.md  035-transactional-ddl-storage-effects.md  036-fixture-and-epoch-storage.md  037-semantic-unique-indexes.md  038-sequence-state.md  039-experiment-with-reduced-copies.md  040-typed-catalog-core.md  041-multithreaded-pgcore-state.md
src/backend/: meson.build
src/backend/access/: meson.build
src/backend/bootstrap/: bootparse.y
src/backend/catalog/: aclchk.c  catalog.c  heap.c  index.c  indexing.c  information_schema.sql  namespace.c  objectaddress.c  pg_constraint.c  pg_proc.c  pg_publication.c  storage.c  toasting.c
src/backend/commands/: analyze.c  async.c  dbcommands.c  event_trigger.c  explain.c  extension.c  indexcmds.c  opclasscmds.c  prepare.c  repack.c  sequence.c  tablecmds.c  tablespace.c  trigger.c  tsearchcmds.c  vacuum.c
src/backend/executor/: execExprInterp.c  execIndexing.c  execTuples.c  execUtils.c  nodeAgg.c  nodeGather.c  nodeGatherMerge.c  nodeModifyTable.c  spi.c
src/backend/libpq/: pqcomm.c
src/backend/nodes/: read.c
src/backend/port/: posix_sema.c  sysv_sema.c  sysv_shmem.c
src/backend/postmaster/: autovacuum.c  bgworker.c  checkpointer.c  fork_process.c  postmaster.c
src/backend/rewrite/: rewriteHandler.c
src/backend/tcop/: postgres.c  pquery.c  utility.c
src/include/: c.h  miscadmin.h  pg_config.h.in  pgstat.h
src/include/access/: fastpg_catalog.h  fastpg_tableam.h  slru.h  transam.h  xact.h  xlog.h  xlogdefs.h  xloginsert.h
src/include/catalog/: heap.h  namespace.h  storage.h
src/include/commands/: async.h
src/include/executor/: nodeAgg.h
src/include/libpq/: libpq.h
src/include/nodes/: memnodes.h  readfuncs.h
src/include/storage/: bufmgr.h  (+13 more)
src/test/modules/fastpg_parser_probe/: Makefile  fastpg_parser_ffi.c  fastpg_parser_ffi.h  fastpg_parser_probe--1.0.sql  fastpg_parser_probe.c  fastpg_parser_probe.control  meson.build
src/test/modules/fastpg_parser_probe/expected/: fastpg_parser_probe.out
src/test/modules/fastpg_parser_probe/sql/: fastpg_parser_probe.sql
(+144 files in other folders)
