[workspace]
members = [
    "crates/fastpg-backend",
    "crates/fastpg-catalog",
    "crates/fastpg-compat",
    "crates/fastpg-exec",
    "crates/fastpg-index",
    "crates/fastpg-pgcore",
    "crates/fastpg-plan",
    "crates/fastpg-server",
    "crates/fastpg-session",
    "crates/fastpg-snapshot",
    "crates/fastpg-storage",
    "crates/fastpg-storage2",
    "crates/fastpg-testkit",
    "crates/fastpg-tx",
    "crates/fastpg-types",
    "crates/fastpg-wire",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "PostgreSQL"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
fastpg-catalog = { path = "crates/fastpg-catalog" }
fastpg-backend = { path = "crates/fastpg-backend" }
fastpg-compat = { path = "crates/fastpg-compat" }
fastpg-exec = { path = "crates/fastpg-exec" }
fastpg-index = { path = "crates/fastpg-index" }
fastpg-pgcore = { path = "crates/fastpg-pgcore" }
fastpg-plan = { path = "crates/fastpg-plan" }
fastpg-server = { path = "crates/fastpg-server" }
fastpg-session = { path = "crates/fastpg-session" }
fastpg-snapshot = { path = "crates/fastpg-snapshot" }
fastpg-storage = { path = "crates/fastpg-storage" }
fastpg-storage2 = { path = "crates/fastpg-storage2" }
fastpg-tx = { path = "crates/fastpg-tx" }
fastpg-types = { path = "crates/fastpg-types" }
fastpg-wire = { path = "crates/fastpg-wire" }
futures = "0.3"
pgwire = { version = "=0.40.0", default-features = false, features = ["server-api"] }
postgres-types = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "signal", "macros"] }
tokio-postgres = "0.7"
cc = "1"
criterion = "0.8"
