[package]
name = "fastpg-exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
mini-sql-testkit = ["dep:fastpg-bind", "dep:fastpg-parser"]
postgres-linked = ["fastpg-pgcore/postgres-linked"]
postgres-execution = ["postgres-linked", "fastpg-pgcore/postgres-execution"]

[dependencies]
fastpg-bind = { workspace = true, optional = true }
fastpg-catalog.workspace = true
fastpg-parser = { workspace = true, optional = true }
fastpg-pgcore.workspace = true
fastpg-storage.workspace = true
fastpg-types.workspace = true
