[package]
name = "fastpg-exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-execution = ["fastpg-pgcore/postgres-execution"]

[dependencies]
fastpg-pgcore.workspace = true
fastpg-storage.workspace = true
fastpg-types.workspace = true
