[package]
name = "fastpg-pgcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-linked = []
postgres-execution = ["postgres-linked"]

[dependencies]
fastpg-catalog.workspace = true
fastpg-storage.workspace = true

[build-dependencies]
cc.workspace = true
