[package]
name = "fastpg-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-linked = ["fastpg-wire/postgres-linked"]
postgres-execution = ["postgres-linked", "fastpg-wire/postgres-execution"]

[dependencies]
fastpg-wire.workspace = true
pgwire.workspace = true
tokio.workspace = true
