[package]
name = "fastpg-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-execution = ["fastpg-wire/postgres-execution"]
rust-catalog = ["fastpg-wire/rust-catalog"]

[dependencies]
fastpg-compat.workspace = true
fastpg-wire.workspace = true
pgwire.workspace = true
tokio.workspace = true
