[package]
name = "fastpg-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
mini-sql-testkit = ["fastpg-exec/mini-sql-testkit"]
postgres-linked = ["fastpg-exec/postgres-linked"]
postgres-execution = ["postgres-linked", "fastpg-exec/postgres-execution"]

[dependencies]
fastpg-compat.workspace = true
fastpg-exec.workspace = true
fastpg-types.workspace = true
