[package]
name = "fastpg-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-execution = ["fastpg-exec/postgres-execution"]
rust-catalog = ["fastpg-exec/rust-catalog"]

[dependencies]
fastpg-compat.workspace = true
fastpg-exec.workspace = true
fastpg-types.workspace = true
