[package]
name = "fastpg-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
fastpg-catalog.workspace = true
fastpg-types.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "storage_engine"
harness = false
