[package]
name = "fastpg-storage2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
fastpg-catalog.workspace = true
fastpg-types.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
