[package]
name = "fastpg-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
mini-sql-testkit = ["fastpg-server/mini-sql-testkit"]
postgres-execution = ["fastpg-pgcore/postgres-execution", "fastpg-server/postgres-execution"]

[dependencies]
fastpg-pgcore.workspace = true
fastpg-server.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-postgres.workspace = true
