[package]
name = "fastpg-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-execution = ["fastpg-pgcore/postgres-execution", "fastpg-server/postgres-execution"]
rust-catalog = ["fastpg-pgcore/rust-catalog", "fastpg-server/rust-catalog"]

[dependencies]
fastpg-pgcore.workspace = true
fastpg-server.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-postgres.workspace = true
