[package]
name = "fastpg-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
postgres-execution = ["fastpg-session/postgres-execution"]

[dependencies]
async-trait.workspace = true
bytes = "1"
fastpg-compat.workspace = true
fastpg-session.workspace = true
fastpg-types.workspace = true
futures.workspace = true
pgwire.workspace = true
postgres-types.workspace = true
tokio.workspace = true
